syntax = "proto3";

package file.v1;

option go_package = "github.com/tappoy/jns/go/_buf/file/v1;filev1";

service PrivateFileService {
	rpc PostFile(PostFileRequest) returns (PostFileResponse) {}
	rpc GCFile(GCFileRequest) returns (GCFileResponse) {}
	rpc GCDir(GCDirRequest) returns (GCDirResponse) {}
	rpc Vacuum(VacuumRequest) returns (VacuumResponse) {}
}

// PostFile
message PostFileRequest {
	string dir_path = 1;
	bytes file = 2;
}
message PostFileResponse {
	string file_id = 1;
}

// GCFile
message GCFileRequest {
	repeated string marked_file = 1;
}
message GCFileResponse {}

// GCDir
message GCDirRequest {
	repeated string marked_dir = 1;
}
message GCDirResponse {}

// Vacuum
message VacuumRequest {}
message VacuumResponse {}
